--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,8 @@
   "dependencies": {
     "sass-list-maps": "~1.0.0",
     "normalize.css": "~3.0.2",
-    "jquery": "1.11.1",
-    "modernizr": "~2.8.3"
+    "jquery": "~2.2.0",
+    "modernizr": "~3.3.1"
   },
   "version": "0.1.3",
   "authors": [
